[package]
name = "hardcpy"
version = "0.1.0"
description = "Simple backup tool written in Rust"
authors = ["Deniz Demir <darkenedMellow@protonmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/obvMellow/hardcpy"
repository = "https://github.com/obvMellow/hardcpy"
keywords = ["cli", "backup"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
colored = "2.1.0"
dirs = "5.0.1"
fnv = "1.0.7"
rust-ini = "0.21.0"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
colog = "1.3.0"
log = "0.4.22"
rand = "0.9.0-alpha.1"
clap = { version = "4.5.11", features = ["derive"] }
fdlimit = "0.3.0"
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
sha2 = "0.10.8"
env_logger = "0.11.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
